--- a/src/index.css
+++ b/src/index.css
@@ -2,15 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+@layer components {
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  body {
+    font-family: sans-serif;
+    
+  }
 }
-
-body {
-  font-family: sans-serif;
-  /* background-color: #151515; */
-  cursor: pointer;
-}
-
